[project]
name = "pl_tools"
version = "0.1.0"
description = "Tools for working with PrairieLearn"
readme = "README.md"
authors = [{ name = "Eliot Robson", email = "eliot.robson24@gmail.com" }]
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["ruff>=0.9.9", "mypy>=1.15.0"]


[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py310"
preview = true
line-length = 120

[tool.ruff.lint]
# Read more here https://beta.ruff.rs/docs/rules/
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I"]

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
required_plugins = ["pytest-cov"]

[tool.coverage.run]
include = ["src/heap_dict/heapdict.py"]
